--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 configurations {
@@ -16,8 +16,8 @@ configurations {
 
 dependencies {
     library group: 'javax.json', name: 'javax.json-api', version: '1.1+'
-    library group: 'org.glassfish', name:'javax.json', version: '1.1+'
-    compileOnly group: 'cd.go.plugin', name: 'go-plugin-api', version: '17.11+'
+    library group: 'org.glassfish', name: 'javax.json', version: '1.1+'
+    compileOnly group: 'cd.go.plugin', name: 'go-plugin-api', version: '17.3+'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     configurations.compile.extendsFrom(configurations.library)
