--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,4 +1,8 @@
 ---
+checks:
+  method-complexity:
+    config:
+      threshold: 10
 plugins:
   checkstyle:
     enabled: true
@@ -8,5 +12,8 @@ plugins:
     enabled: true
     config:
       sonar.java.source: 8
+      tests_patterns:
+        - 'src/test/**'
+        - 'src/integrationTest/**'
   pmd:
     enabled: true
