--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -13,7 +13,7 @@ plugins:
     config:
       sonar.java.source: 8
       tests_patterns:
-        - 'src/test/**'
-        - 'src/integrationTest/**'
+        - 'src/test/**/*'
+        - 'src/integrationTest/**/*'
   pmd:
     enabled: true
