Get plugin working with docker. (#16)
* Get plugin working with docker.

Add the basic interactions with the docker daemon (pull, create, exec,
and remove). Setup plugin to run `echo Hello World!` from the
busybox:latest image to verify.

Signed-off-by: Chris Arnold <cma.arnold@gmail.com>

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -2,7 +2,10 @@
 checks:
   method-complexity:
     config:
-      threshold: 10
+      threshold: 15
+  method-lines:
+    config:
+      threshold: 45
 plugins:
   checkstyle:
     enabled: true
@@ -13,7 +16,8 @@ plugins:
     config:
       sonar.java.source: 8
       tests_patterns:
-        - 'src/test/**/*'
-        - 'src/integrationTest/**/*'
+        - 'src/test/**'
+        - 'src/integrationTest/**'
+        - 'src/dockerTest/**'
   pmd:
     enabled: true
