Rebrand as "Docker Exec Plugin" (#17)
Signed-off-by: Chris Arnold <cma.arnold@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,7 @@ dockerTest {
             dockerHost = dockerHost.replaceFirst 'tcp', 'http'
         }
     }
-    systemProperty 'godockerbuildplugin.dockerhost', dockerHost
+    systemProperty 'gocddockerexecplugin.dockerhost', dockerHost
 }
 
 check.dependsOn dockerTest
