Make image used configurable. (#19)
Make image used configurable.

Closes #4

Signed-off-by: Chris Arnold <cma.arnold@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 // build
 
 processResources {
-    expand project.properties
+    filesNotMatching('**/task.template.html') { file -> file.expand project.properties }
 }
 
 jar {
