--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-    id 'com.avast.gradle.docker-compose' version '0.6.6'
+    id 'com.avast.gradle.docker-compose' version '0.6.9'
     id 'org.unbroken-dome.test-sets' version '1.4.2'
+    id 'com.github.ben-manes.versions' version '0.17.0'
 }
 
 group 'io.bitgrillr'
@@ -32,7 +33,7 @@ dependencies {
     compileOnly group: 'cd.go.plugin', name: 'go-plugin-api', version: '17.3+'
     testCompile group: 'cd.go.plugin', name: 'go-plugin-api', version: '17.3+'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.11+'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.13+'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0-beta.5'
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.0-beta.5'
     integrationTestCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5+'
