Add environment variables to build container. (#24)
Closes #7

Signed-off-by: Chris Arnold <cma.arnold@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -97,7 +97,7 @@ dockerTest.mustRunAfter test
 // integration tests
 
 processIntegrationTestResources {
-    filesNotMatching('**/passwd') { file -> file.expand project.properties }
+    filesNotMatching(['**/passwd', '**/cruise-config.xml']) { file -> file.expand project.properties }
     filesMatching(['**/cruise-config.xml', '**/passwd']) { file -> file.mode = 0777 }
 }
 
